--- a/states/grid/grid.html
+++ b/states/grid/grid.html
@@ -94,7 +94,7 @@
         <dd class="ctr w80">It accounts for fixed and relative gaps. "fr" respects the absolute value of px widths. These will never change! Only the fr columns will respond to viewport adjustment--which is extremely cool and one of the many reasons why so many lovely front-end
           nerds go on about it! 😀</dd>
         <pre>
-<div class="brdr-w w60"><h1 class="chtitle codepro bold softbrown">Let's dry out some code!</h1>
+<div class="brdr-w w60"><h1 class="chtitle codepro bold softbrown">Let's dry out this css.</h1>
 <h3 class="wh">Imagine that we have four columns:</h3>
 <pre class="left w30 prettyprint bold"> grid-template-columns: 2fr 2fr 2fr 2fr;</pre>
         <h4 class="wh">Lets clean this repeated pattern up by using:<code class="med">Grid's repeat(); method!</code></h4>
