--- a/states/node/node.html
+++ b/states/node/node.html
@@ -13,7 +13,7 @@ A cookie is the mechanism by which we pass that ID back and forth.
 This is what gets tossed back and forth on each of our requests.
 
   </div>
-    <h3 class="w40">PLACEHOLDER</h3>
+    <h3 class="w40">A sample GET request</h3>
 
 <pre class="prettyprint w60">
 var members = [
