--- a/states/home/home.html
+++ b/states/home/home.html
@@ -4,20 +4,18 @@
 <pre>
 <!-- pre for all -->
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.this()</h1>
-<p class="dkgrey2">practical notes, code and advice distilled from myriad sorces in web development. It is a "living-document" to which I contribute daily as a resource and reference to others.
+<p class="dkgrey2">practical notes, code and advice distilled from myriad sources in web development. It is a "living-document" to which I contribute daily as a resource and reference to others.
 </div>
 <br><br>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
 <p class="dkgrey2">many examples originate from the sources cited.
 proper attribution is made as I iterate over this site--editing and grooming it's contents on a regular basis.
 <br>
-most are lesson examples I've saved applying the valuable lessons as I've learned.</p>
+These are not comprehensive walkthroughs, but bits and pieces--yet to be edited.</p>
 </div>
 <br><br>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
-<h5 class="dkgrey2">This is a fan-site for web-code. And a way to give back to the community that has been so generous to me with advice and guidance over the last year or so.
-
-My intent is to motivate and to help others who--like me--struggle with learning new and difficult tech on a daily basis.</h5>
+<h5 class="dkgrey2">This is a fan-site for web developer/teachers. It's available here as a reference, a motivator and a way to give back something to the community that has been such a help to me in the past. <br /><br />If I am at all lucky enough to have helped just one person, then these months putting these pieces together will not have been misspent.</h5>
 </div>
 
 
@@ -26,14 +24,8 @@ My intent is to motivate and to help others who--like me--struggle with learning
 
 
 
-
-
-<h6 class="sm chtitle dkorange">No claim of copyright (--neither of expertise nor creativity for that matter). <br />On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient and painstaking. <br>@ me on twitter <span class=""><a target="_blank" href="https://twitter.com/beau_dev"><b class="med">🐦</b></a> if you have a question.</span></h6>
+<h6 class="chtitle dkorange">No claim of copyright (nor of expertise for that matter). <br />On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient and painstaking. <br>@ me on twitter <span class=""><a target="_blank" href="https://twitter.com/beau_dev"><b class="med">🐦</b></a> if you have a question.</span></h6>
 </pre>
-
-
-
-
 
 
 
