--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Day June 11th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Well into CSS grid & finding it a joy. Today's word is <a target="_blank" href="https://en.wikipedia.org/wiki/Duende_(art)">duende</a> <em class="bold">n.</em> I have much to reflect on, but no time. --Project due July 7th using Grid & SVG to paint a row of houses. <img class="w10" src="./img/norleans.jpg" alt="New Orleans House"> <br>
+  It's an absolutely hair-brained idea. :) Will have to map out, in detail, the outline and fill in gaps. Perhaps relative units to make it responsive. Perhaps SVG for the tricky stuff like deck-railing and house-gutters. And, so... Let's continue with the CSS Grid revisit.</h3>
+  <br><blockquote class="w40 right">"We choose to learn CSS Grid this month and the other things--Not because they are easy, but because we thought they would be easy..."</blockquote>
+  <cite class="right sm w40">--J.F. Kennedy <em class="sm">(paraphrased)</em></cite>
+  <br>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Day June 10th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Had a revelation about a project in CSS. It will require 3 weeks-ish to put together. It will require another view to be added to codejournal: css-grid. The views in the nav-bar are too many and unwieldy. It's time to further separate those concerns & modularize that puppy! Will get to work on that today & deploy soon!
