--- a/states/home/home.html
+++ b/states/home/home.html
@@ -8,14 +8,13 @@
 </div>
 <br><br>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
-<p class="dkgrey2">many examples originate from the sources cited.
-proper attribution is made as I iterate over this site--editing and grooming it's contents on a regular basis.
+<p class="dkgrey2">attribution of code and recommendations to useful articles, presentations, lectures, books, etc. will continue to be made as I iterate over these pages regularly.
 <br>
-These are not comprehensive walkthroughs, but bits and pieces--yet to be edited.</p>
+These are not comprehensive walkthroughs, but bits and pieces--that are continuously edited and groomed.</p>
 </div>
 <br><br>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
-<h5 class="dkgrey2">This is a fan-site for web developer/teachers. It's available here as a reference, a motivator and a way to give back something to the community that has been such a help to me in the past. <br /><br />If I am at all lucky enough to have helped just one person, then these months putting these pieces together will not have been misspent.</h5>
+<h5 class="dkgrey2">This is a fan-site for web developer/teachers. It's available here as a reference, a motivator and a way to give back something to the community that has been such a help to me in the past. <br /><br />If I am--at all--lucky enough to have helped just one person, then the months putting these pieces together will not have been misspent.</h5>
 </div>
 
 
@@ -23,9 +22,12 @@ These are not comprehensive walkthroughs, but bits and pieces--yet to be edited.
 
 
 
-
-<h6 class="chtitle dkorange">No claim of copyright (nor of expertise for that matter). <br />On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient and painstaking. <br>@ me on twitter <span class=""><a target="_blank" href="https://twitter.com/beau_dev"><b class="med">🐦</b></a> if you have a question.</span></h6>
 </pre>
+<footer class="dkbg3 sm comfort"><ul><li><a target="_blank" href="https://github.com/Beauvelop">github</a></li>
+  <li><a href="https://codepen.io/beau_dev/" target="_blank">codepen</a></li>
+  <li><a target="_blank" href="https://twitter.com/beau_dev">twitter</a></li></ul>
+  <h6 class="chtitle sm dkorange">No claim of copyright (nor of expertise for that matter). --On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient and painstaking. <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
+</footer>
 
 
 
