--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -37,9 +37,9 @@
   <hr />
   <h2 class="date">Day June 10th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
-  <h3 class="subtitle">Had a revelation about a project in CSS. It will require 3 weeks-ish to put together. It will require another view to be added to codejournal: css-grid. The views in the nav-bar are too many and unwieldy. It's time to further separate those concerns & modularize that puppy! Will get to work on that today & deploy soon!
+  <h3 class="subtitle">Had a revelation about a project in CSS. It will require 3 weeks-ish to put together. It will require another view to be added to codejournal: css-grid. The views in the nav-bar are too many and unwieldy. It's time to further separate those concerns & modularize that puppy! Will get to work on that today & deploy soon.
 <br>
-  <h5><br />Question: Am I putting off saving all of these notes into a postgres db? <br>Answer: "Yes, probably" <br>Reason: "I'm scared of breaking shit." <br />Retort: "Fear of breaking shit prevents growth. Breaking shit is how you learn. Breaking shit is why you are here!"<br />Conclusion: "I'll get into it this weekend" <br /> Reflection: "Now is the time to learn & break shit so it don't get broke in production." <br>Advice: "Start small and iterate over it...and stop swearing so much"</h5></h3>
+  <h5><br />Question: Am I putting off saving all of these notes into a postgres db? <br>Answer: "Yes, probably" <br>Reason: "I'm scared of breaking shit." <br />Retort: "Fear of breaking shit prevents growth. Breaking shit is how you learn. Breaking shit is why you are here."<br />Conclusion: "I'll get into it this weekend" <br /> Reflection: "Now is the time to learn & break shit so it don't get broke in production." <br>Advice: "Start small and iterate over it...and stop swearing so much"</h5></h3>
 
   <br>
   <h3>To do:</h3>
@@ -70,7 +70,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>Studied Addy Osmani's jsconf presentation on loading and implemented it! <a href="https://youtu.be/7vUs5yOuv-o">Link Here</a> it's brilliant.</li>
+    <li>Studied Addy Osmani's jsconf presentation on loading and understood some. It's a bit above my paygrade. <a target="_blank" href="https://youtu.be/7vUs5yOuv-o">Link Here</a> it's very interesting, though.</li>
     <li>webpagetest.org/easy <a target="_blank" href="https://www.webpagetest.org/easy">This is my jam</a>  #perfmatters</li>
     <li>Did a pretty comprehensive guide on svg vs. html boxes animations with GSAP</li>
   </ol>
