--- a/states/grid/grid.html
+++ b/states/grid/grid.html
@@ -34,8 +34,7 @@
  }
 </pre>
 </div>
-<h2 class="bold">.grid's css rules express that default height will always be <code>100px</code><br />
-However, content trumps this and the <code>"auto"</code> will enable a stretch to accomodate content.</h2>
+<br /><h2 class="bold">This <code>.grid</code> rule defines default height as <code>100px</code> unless content overrides this value.<br />Then, the <code>"auto"</code> will enable a stretch to accomodate content.</h2>
 <div class="chtitle"><img class="w40" src="./img/gridf.png" alt="grid with minmax values"></div>
 
 
