--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,7 +18,28 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Day June 11th, 2017</h2>
+  <h2 class="date">Monday June 12th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Finished first study of a detail of this photo: <img class="w10" src="./img/window1.png" alt="window detail of larger painting">
+  <br>
+  The pen is <a target="_blank" href="https://codepen.io/beau_dev/full/RgRwNm/">here.</a> It's adequate. Skew() is still a bit of a mystery. translate3d() works out the gpu & for the larger painting project, I'm going to run into performance issues when I begin to animate. <br>
+  <br />
+  Besides, (as per simply loading the thing when I'm done) TTFP is gonna suck if I don't figure it out. I've always heard that animating box-shadow is absolutely <em>browser-paint</em> cray-cray. --Not something I can ignore.
+
+  Will have to confront something else I've been ignoring: CSS Shapes. Either render this puppy in svg or go pure css for all of it. Oy vey...
+  Okay. today I'm into grid areas and naming lines. It doesn't look easy. Perceived blocks are appropriating relative units to the project I'm working on. I may go purely with px. --So long as containers are using px, I'll be okay I think. (houses, window-containers, etc.).</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>outline painting with grid into subgrids</li>
+    <li>start the project in sass</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Sunday June 11th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Well into CSS grid & finding it a joy. Today's word is <a target="_blank" href="https://en.wikipedia.org/wiki/Duende_(art)">duende</a> <em class="bold">n.</em> I have much to reflect on, but no time. --Project due July 7th using Grid & SVG to paint a row of houses. <img class="w10" src="./img/norleans.jpg" alt="New Orleans House"> <br>
   It's an absolutely hair-brained idea. :) Will have to map out, in detail, the outline and fill in gaps. Perhaps relative units to make it responsive. Perhaps SVG for the tricky stuff like deck-railing and house-gutters. And, so... Let's continue with the CSS Grid revisit.</h3>
@@ -28,11 +49,13 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
+    <li>Do the lectures/exercises of a first look into grid.</li>
+    <li>Do a study in codepen using only grid.</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Pen done.</li>
+    <li>Groomed and restyled home.html and grid.html. 5 good pushes today.</li>
   </ol>
   <hr />
   <h2 class="date">Day June 10th, 2017</h2>
